--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -27,7 +27,7 @@
 			
 						<div class="media-body">
 							<div class="article-metadata">
-								<a class="mr-2" href="<%= persons_profile_path %>"><%= article.author %></a>
+								<a class="mr-2" href="<%= user_root_path %>"><%= article.author %></a>
 								<small class="text-dark"><%= article.created_at%></small>
 							</div>
 							<h2><a class="article-title" href="<%= article_path(article) %>"><%= article.title %></a></h2>
