--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,7 +3,18 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
+  <div class="form-group">
+    <div class="row">
+      <div class="col-sm-4">
+        <%= image_tag user_avatar(resource, 100), :class => 'rounded-circle' %>
+      </div>
+      <div class="col-sm-8">  
+        <%= f.file_field :avatar%>
+      </div>
+    </div>
+  </div>
+
+  <div class="form-group">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
